# chain-of-jailbreaks

./: .env.example  .gitignore  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: pages.yml
banks/: kimi-k2.6-pilot-v0.1.json
corg_eval/: __init__.py  __main__.py  analysis.py  banks.py  corridor.py  env.py  judge.py  llm.py  planner.py  probes.py  protocol.py  runner.py  scoring.py  search.py  smt.py  surface.py  synthesis.py  tactics.py  template_render.py  workqueue.py
corg_eval/templates/: archive_protocol.j2  field_guide.j2  lab_notebook.j2  theorem_margin.j2
corpora/planned-pilot-v0.1/: planned-corrigibility-seed0410-d3-sdk-strict.corridor.json  planned-corrigibility-seed0410-d3-sdk-strict.plan.json  planned-mixed-seed0410-d3-sdk-strict.corridor.json  planned-mixed-seed0410-d3-sdk-strict.plan.json
corpora/planned-smoke-v0.1/: planned-mixed-seed0400-d2-sdk-strict.corridor.json  planned-mixed-seed0400-d2-sdk-strict.plan.json
docs/: app.js  index.html  results.json  styles.css
tests/: test_corridor.py  test_scoring.py  test_smt_planner.py  test_workqueue.py
